syntax = "proto3";
package shifty11.tictactoe.tictactoe;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/shifty11/tic-tac-toe/x/tictactoe/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateGame(MsgCreateGame) returns (MsgCreateGameResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateGame {
  string creator = 1;
  string player2 = 2;
}

message MsgCreateGameResponse {
  string gameId = 1;
}

// this line is used by starport scaffolding # proto/tx/message
